--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css">
+    <script src="main.js"></script>
     <meta charset="UTF-8">
     <title>Tech It Easy Dashboard</title>
 </head>
