--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="styles.css">
+    <head>
+        <link rel="stylesheet" href="styles.css">
+        <meta charset="UTF-8">
+        <title>Tech It Easy Dashboard</title>
+    </head>
+    <body>
+        <p id="leftToSell"></p>
+        <p id="targetRevenue"></p>
+        <p id="revenueToDate"></p>
+        <h1 id="televisionList">Televisies op voorraad:</h1>
+    </body>
     <script src="main.js"></script>
-    <meta charset="UTF-8">
-    <title>Tech It Easy Dashboard</title>
-</head>
-<body>
-    <p id="Televisions">Televisies</p>
-</body>
 </html>
